# test-app/config/routes.rb
@@ -1,5 +1,6 @@
 TestApp::Application.routes.draw do
 
+  post '/blogs/multipart', to: 'blogs#multipart_create'
   post '/blogs/flexible', to: 'blogs#flexible_create'
   post '/blogs/alternate', to: 'blogs#alternate_create'
   resources :blogs
